// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Plugins > component library 1`] = `
[
  {
    ":frame-id": "1",
    ":id": "1",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "Root Frame",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [
      "bf867970-a428-8013-8004-f5d116d5102e",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
  {
    ":frame-id": "1",
    ":id": "2",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#B1B2B5",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 100,
    "id": "bf867970-a428-8013-8004-f5d116d5102e",
    "name": "Rectangle",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 100,
        "y": 0,
      },
      {
        "x": 100,
        "y": 100,
      },
      {
        "x": 0,
        "y": 100,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 0,
    "ry": 0,
    "selrect": {
      "height": 100,
      "width": 100,
      "x": 0,
      "x1": 0,
      "x2": 100,
      "y": 0,
      "y1": 0,
      "y2": 100,
    },
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "rect",
    "width": 100,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Plugins > create flex layout 1`] = `
[
  {
    ":frame-id": "1",
    ":id": "1",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "Root Frame",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [
      "779d2f8b-aebc-8090-8004-f5d0fc658b7b",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
  {
    ":frame-id": "1",
    ":id": "2",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 110.00000000000001,
    "hideFillOnExport": false,
    "id": "779d2f8b-aebc-8090-8004-f5d0fc658b7b",
    "layout": "flex",
    "layoutAlignContent": "stretch",
    "layoutAlignItems": "center",
    "layoutFlexDir": "row",
    "layoutGap": {
      "columnGap": 0,
      "rowGap": 0,
    },
    "layoutGapType": "multiple",
    "layoutGridDir": "column",
    "layoutItemHSizing": "auto",
    "layoutItemVSizing": "auto",
    "layoutJustifyContent": "center",
    "layoutPadding": {
      "p1": 5,
      "p2": 5,
      "p3": 5,
      "p4": 5,
    },
    "layoutPaddingType": "simple",
    "layoutWrapType": "nowrap",
    "name": "Board",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 210,
        "y": 0,
      },
      {
        "x": 210,
        "y": 110.00000000000001,
      },
      {
        "x": 0,
        "y": 110.00000000000001,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 110.00000000000001,
      "width": 210,
      "x": 0,
      "x1": 0,
      "x2": 210,
      "y": 0,
      "y1": 0,
      "y2": 110.00000000000001,
    },
    "shapes": [
      "779d2f8b-aebc-8090-8004-f5d0fc728c2f",
      "779d2f8b-aebc-8090-8004-f5d0fc7164ef",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 210,
    "x": 0,
    "y": 0,
  },
  {
    ":frame-id": "1",
    ":id": "3",
    ":parent-id": "1",
    "constraintsH": "left",
    "constraintsV": "top",
    "fills": [
      {
        "fillColor": "#B1B2B5",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "779d2f8b-aebc-8090-8004-f5d0fc658b7b",
    "height": 100,
    "id": "779d2f8b-aebc-8090-8004-f5d0fc7164ef",
    "name": "Rectangle",
    "parentId": "779d2f8b-aebc-8090-8004-f5d0fc658b7b",
    "points": [
      {
        "x": 5,
        "y": 5.000000000000007,
      },
      {
        "x": 105,
        "y": 5.000000000000007,
      },
      {
        "x": 105,
        "y": 105,
      },
      {
        "x": 5,
        "y": 105,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 0,
    "ry": 0,
    "selrect": {
      "height": 100,
      "width": 100,
      "x": 5,
      "x1": 5,
      "x2": 105,
      "y": 5.000000000000007,
      "y1": 5.000000000000007,
      "y2": 105,
    },
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "rect",
    "width": 100,
    "x": 5,
    "y": 5.000000000000007,
  },
  {
    ":frame-id": "1",
    ":id": "4",
    ":parent-id": "1",
    "constraintsH": "left",
    "constraintsV": "top",
    "fills": [
      {
        "fillColor": "#B1B2B5",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "779d2f8b-aebc-8090-8004-f5d0fc658b7b",
    "height": 100,
    "id": "779d2f8b-aebc-8090-8004-f5d0fc728c2f",
    "name": "Ellipse",
    "parentId": "779d2f8b-aebc-8090-8004-f5d0fc658b7b",
    "points": [
      {
        "x": 105,
        "y": 5.000000000000007,
      },
      {
        "x": 205,
        "y": 5.000000000000007,
      },
      {
        "x": 205,
        "y": 105,
      },
      {
        "x": 105,
        "y": 105,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 100,
      "width": 100,
      "x": 105,
      "x1": 105,
      "x2": 205,
      "y": 5.000000000000007,
      "y1": 5.000000000000007,
      "y2": 105,
    },
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "circle",
    "width": 100,
    "x": 105,
    "y": 5.000000000000007,
  },
]
`;

exports[`Plugins > create frame - text - rectable 1`] = `
[
  {
    ":frame-id": "1",
    ":id": "1",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "Root Frame",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [
      "76961b59-7aaa-8044-8004-f5d0f6f23434",
      "76961b59-7aaa-8044-8004-f5d0f6f9b0f6",
      "76961b59-7aaa-8044-8004-f5d0f6fdb4d0",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
  {
    ":frame-id": "1",
    ":id": "2",
    ":parent-id": "1",
    "content": {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "fills": [
                    {
                      "fillColor": "#000000",
                      "fillOpacity": 1,
                    },
                  ],
                  "fontFamily": "sourcesanspro",
                  "fontId": "sourcesanspro",
                  "fontSize": "14",
                  "fontStyle": "normal",
                  "fontVariantId": "regular",
                  "fontWeight": "400",
                  "letterSpacing": "0",
                  "lineHeight": "1.2",
                  "text": "Hello from plugin",
                  "textAlign": "left",
                  "textDecoration": "none",
                  "textTransform": "none",
                  "typographyRefFile": null,
                  "typographyRefId": null,
                },
              ],
              "fills": [
                {
                  "fillColor": "#000000",
                  "fillOpacity": 1,
                },
              ],
              "fontFamily": "sourcesanspro",
              "fontId": "sourcesanspro",
              "fontSize": "14",
              "fontStyle": "normal",
              "fontVariantId": "regular",
              "fontWeight": "400",
              "letterSpacing": "0",
              "lineHeight": "1.2",
              "textAlign": "left",
              "textDecoration": "none",
              "textTransform": "none",
              "type": "paragraph",
              "typographyRefFile": null,
              "typographyRefId": null,
            },
          ],
          "type": "paragraph-set",
        },
      ],
      "type": "root",
    },
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "growType": "auto-width",
    "height": 17,
    "id": "76961b59-7aaa-8044-8004-f5d0f6f23434",
    "name": "Text",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 786,
        "y": 540,
      },
      {
        "x": 786,
        "y": 557,
      },
      {
        "x": 684,
        "y": 557,
      },
    ],
    "positionData": [
      {
        "direction": "ltr",
        "fills": [
          {
            "fillColor": "#000000",
            "fillOpacity": 1,
          },
        ],
        "fontFamily": "sourcesanspro",
        "fontSize": "14px",
        "fontStyle": "normal",
        "fontWeight": "400",
        "height": 18,
        "letterSpacing": "normal",
        "text": "Hello from plugin",
        "textDecoration": "none solid rgb(0, 0, 0)",
        "textTransform": "none",
        "width": 101.53125,
        "x": 684,
        "x1": 0,
        "x2": 101.53125,
        "y": 557,
        "y1": -1,
        "y2": 17,
      },
    ],
    "rotation": 0,
    "selrect": {
      "height": 17,
      "width": 102,
      "x": 684,
      "x1": 684,
      "x2": 786,
      "y": 540,
      "y1": 540,
      "y2": 557,
    },
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "text",
    "width": 102,
    "x": 684,
    "y": 540,
  },
  {
    ":frame-id": "1",
    ":id": "3",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#B1B2B5",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 200,
    "id": "76961b59-7aaa-8044-8004-f5d0f6f9b0f6",
    "name": "Rectangle",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "pluginData": {
      "TEST": {
        "customKey": "customValue",
      },
    },
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 884,
        "y": 540,
      },
      {
        "x": 884,
        "y": 740,
      },
      {
        "x": 684,
        "y": 740,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 0,
    "ry": 0,
    "selrect": {
      "height": 200,
      "width": 200,
      "x": 684,
      "x1": 684,
      "x2": 884,
      "y": 540,
      "y1": 540,
      "y2": 740,
    },
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "rect",
    "width": 200,
    "x": 684,
    "y": 540,
  },
  {
    ":frame-id": "1",
    ":id": "4",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 300,
    "hideFillOnExport": false,
    "id": "76961b59-7aaa-8044-8004-f5d0f6fdb4d0",
    "name": "Board name",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 984,
        "y": 540,
      },
      {
        "x": 984,
        "y": 840,
      },
      {
        "x": 684,
        "y": 840,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 8,
    "ry": 8,
    "selrect": {
      "height": 300,
      "width": 300,
      "x": 684,
      "x1": 684,
      "x2": 984,
      "y": 540,
      "y1": 540,
      "y2": 840,
    },
    "shapes": [
      "76961b59-7aaa-8044-8004-f5d0f7022e51",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 300,
    "x": 684,
    "y": 540,
  },
  {
    ":frame-id": "1",
    ":id": "5",
    ":parent-id": "1",
    "constraintsH": "left",
    "constraintsV": "top",
    "content": {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "fills": [
                    {
                      "fillColor": "#000000",
                      "fillOpacity": 1,
                    },
                  ],
                  "fontFamily": "sourcesanspro",
                  "fontId": "sourcesanspro",
                  "fontSize": "14",
                  "fontStyle": "normal",
                  "fontVariantId": "regular",
                  "fontWeight": "400",
                  "letterSpacing": "0",
                  "lineHeight": "1.2",
                  "text": "Hello from frame",
                  "textAlign": "left",
                  "textDecoration": "none",
                  "textTransform": "none",
                  "typographyRefFile": null,
                  "typographyRefId": null,
                },
              ],
              "fills": [
                {
                  "fillColor": "#000000",
                  "fillOpacity": 1,
                },
              ],
              "fontFamily": "sourcesanspro",
              "fontId": "sourcesanspro",
              "fontSize": "14",
              "fontStyle": "normal",
              "fontVariantId": "regular",
              "fontWeight": "400",
              "letterSpacing": "0",
              "lineHeight": "1.2",
              "textAlign": "left",
              "textDecoration": "none",
              "textTransform": "none",
              "type": "paragraph",
              "typographyRefFile": null,
              "typographyRefId": null,
            },
          ],
          "type": "paragraph-set",
        },
      ],
      "type": "root",
    },
    "flipX": null,
    "flipY": null,
    "frameId": "76961b59-7aaa-8044-8004-f5d0f6fdb4d0",
    "growType": "auto-width",
    "height": 17,
    "id": "76961b59-7aaa-8044-8004-f5d0f7022e51",
    "name": "Text",
    "parentId": "76961b59-7aaa-8044-8004-f5d0f6fdb4d0",
    "points": [
      {
        "x": 10,
        "y": 10,
      },
      {
        "x": 109,
        "y": 10,
      },
      {
        "x": 109,
        "y": 27,
      },
      {
        "x": 10,
        "y": 27,
      },
    ],
    "positionData": [
      {
        "direction": "ltr",
        "fills": [
          {
            "fillColor": "#000000",
            "fillOpacity": 1,
          },
        ],
        "fontFamily": "sourcesanspro",
        "fontSize": "14px",
        "fontStyle": "normal",
        "fontWeight": "400",
        "height": 18,
        "letterSpacing": "normal",
        "text": "Hello from frame",
        "textDecoration": "none solid rgb(0, 0, 0)",
        "textTransform": "none",
        "width": 98.734375,
        "x": 10,
        "x1": 0,
        "x2": 98.734375,
        "y": 27,
        "y1": -1,
        "y2": 17,
      },
    ],
    "rotation": 0,
    "selrect": {
      "height": 17,
      "width": 99,
      "x": 10,
      "x1": 10,
      "x2": 109,
      "y": 10,
      "y1": 10,
      "y2": 27,
    },
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "text",
    "width": 99,
    "x": 10,
    "y": 10,
  },
]
`;

exports[`Plugins > create grid layout 1`] = `
[
  {
    ":frame-id": "1",
    ":id": "1",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "Root Frame",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [
      "e2446c28-add3-8080-8004-f5d101af8fc7",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
  {
    ":frame-id": "1",
    ":id": "2",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 100,
    "hideFillOnExport": false,
    "id": "e2446c28-add3-8080-8004-f5d101af8fc7",
    "layout": "grid",
    "layoutAlignContent": "stretch",
    "layoutAlignItems": "center",
    "layoutGap": {
      "columnGap": 10,
      "rowGap": 10,
    },
    "layoutGapType": "multiple",
    "layoutGridCells": {
      "e2446c28-add3-8080-8004-f5d101b7eae8": {
        "alignSelf": "auto",
        "column": 1,
        "columnSpan": 1,
        "id": "e2446c28-add3-8080-8004-f5d101b7eae8",
        "justifySelf": "auto",
        "position": "auto",
        "row": 1,
        "rowSpan": 1,
        "shapes": [],
      },
      "e2446c28-add3-8080-8004-f5d101b7eae9": {
        "alignSelf": "auto",
        "column": 1,
        "columnSpan": 1,
        "id": "e2446c28-add3-8080-8004-f5d101b7eae9",
        "justifySelf": "auto",
        "position": "auto",
        "row": 2,
        "rowSpan": 1,
        "shapes": [],
      },
      "e2446c28-add3-8080-8004-f5d101b8ef63": {
        "alignSelf": "auto",
        "column": 2,
        "columnSpan": 1,
        "id": "e2446c28-add3-8080-8004-f5d101b8ef63",
        "justifySelf": "auto",
        "position": "auto",
        "row": 1,
        "rowSpan": 1,
        "shapes": [],
      },
      "e2446c28-add3-8080-8004-f5d101b8ef64": {
        "alignSelf": "auto",
        "column": 2,
        "columnSpan": 1,
        "id": "e2446c28-add3-8080-8004-f5d101b8ef64",
        "justifySelf": "auto",
        "position": "auto",
        "row": 2,
        "rowSpan": 1,
        "shapes": [],
      },
    },
    "layoutGridColumns": [
      {
        "type": "flex",
        "value": 1,
      },
      {
        "type": "flex",
        "value": 1,
      },
    ],
    "layoutGridDir": "row",
    "layoutGridRows": [
      {
        "type": "flex",
        "value": 1,
      },
      {
        "type": "flex",
        "value": 1,
      },
    ],
    "layoutJustifyContent": "space-between",
    "layoutJustifyItems": "start",
    "layoutPadding": {
      "p1": 5,
      "p2": 5,
      "p3": 5,
      "p4": 5,
    },
    "layoutPaddingType": "simple",
    "name": "Board",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 100,
        "y": 0,
      },
      {
        "x": 100,
        "y": 100,
      },
      {
        "x": 0,
        "y": 100,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 100,
      "width": 100,
      "x": 0,
      "x1": 0,
      "x2": 100,
      "y": 0,
      "y1": 0,
      "y2": 100,
    },
    "shapes": [],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 100,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Plugins > group and ungroup 1`] = `
[
  {
    ":frame-id": "1",
    ":id": "1",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "Root Frame",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [
      "d93e51ed-0b43-8077-8004-f5d1070691ce",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
  {
    ":frame-id": "1",
    ":id": "2",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#B1B2B5",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 100,
    "id": "d93e51ed-0b43-8077-8004-f5d106ffe16b",
    "name": "Rectangle",
    "parentId": "d93e51ed-0b43-8077-8004-f5d1070691ce",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 100,
        "y": 0,
      },
      {
        "x": 100,
        "y": 100,
      },
      {
        "x": 0,
        "y": 100,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 0,
    "ry": 0,
    "selrect": {
      "height": 100,
      "width": 100,
      "x": 0,
      "x1": 0,
      "x2": 100,
      "y": 0,
      "y1": 0,
      "y2": 100,
    },
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "rect",
    "width": 100,
    "x": 0,
    "y": 0,
  },
  {
    ":frame-id": "1",
    ":id": "3",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#B1B2B5",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 100,
    "id": "d93e51ed-0b43-8077-8004-f5d10705af65",
    "name": "Rectangle",
    "parentId": "d93e51ed-0b43-8077-8004-f5d1070691ce",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 100,
        "y": 0,
      },
      {
        "x": 100,
        "y": 100,
      },
      {
        "x": 0,
        "y": 100,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 0,
    "ry": 0,
    "selrect": {
      "height": 100,
      "width": 100,
      "x": 0,
      "x1": 0,
      "x2": 100,
      "y": 0,
      "y1": 0,
      "y2": 100,
    },
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "rect",
    "width": 100,
    "x": 0,
    "y": 0,
  },
  {
    ":frame-id": "1",
    ":id": "4",
    ":parent-id": "1",
    "fills": [],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 100,
    "id": "d93e51ed-0b43-8077-8004-f5d1070691ce",
    "index": 2,
    "name": "Group",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 100,
        "y": 0,
      },
      {
        "x": 100,
        "y": 100,
      },
      {
        "x": 0,
        "y": 100,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 100,
      "width": 100,
      "x": 0,
      "x1": 0,
      "x2": 100,
      "y": 0,
      "y1": 0,
      "y2": 100,
    },
    "shapes": [
      "d93e51ed-0b43-8077-8004-f5d106ffe16b",
      "d93e51ed-0b43-8077-8004-f5d10705af65",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "group",
    "width": 100,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Plugins > insert svg 1`] = `
[
  {
    ":frame-id": "1",
    ":id": "1",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "Root Frame",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [
      "9bf6fbc5-040c-80f0-8004-f5d10c5820ec",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
  {
    ":frame-id": "1",
    ":id": "2",
    ":parent-id": "1",
    "fills": [],
    "flipX": false,
    "flipY": false,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 130,
    "id": "9bf6fbc5-040c-80f0-8004-f5d10c5820ec",
    "name": "Test icon",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 984,
        "y": 540,
      },
      {
        "x": 984,
        "y": 670,
      },
      {
        "x": 684,
        "y": 670,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 130,
      "width": 300,
      "x": 684,
      "x1": 684,
      "x2": 984,
      "y": 540,
      "y1": 540,
      "y2": 670,
    },
    "shapes": [
      "9bf6fbc5-040c-80f0-8004-f5d10c590e5e",
      "9bf6fbc5-040c-80f0-8004-f5d10c590e5f",
      "9bf6fbc5-040c-80f0-8004-f5d10c5942ab",
    ],
    "strokes": [],
    "svgAttrs": {
      "height": "130",
      "width": "300",
    },
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "group",
    "width": 300,
    "x": 684,
    "y": 540,
  },
  {
    ":frame-id": "1",
    ":id": "3",
    ":parent-id": "1",
    "fills": [],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 130,
    "hidden": true,
    "id": "9bf6fbc5-040c-80f0-8004-f5d10c590e5e",
    "name": "base-background",
    "parentId": "9bf6fbc5-040c-80f0-8004-f5d10c5820ec",
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 984,
        "y": 540,
      },
      {
        "x": 984,
        "y": 670,
      },
      {
        "x": 684,
        "y": 670,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 0,
    "ry": 0,
    "selrect": {
      "height": 130,
      "width": 300,
      "x": 684,
      "x1": 684,
      "x2": 984,
      "y": 540,
      "y1": 540,
      "y2": 670,
    },
    "strokes": [],
    "svgAttrs": {
      "fill": "none",
      "id": "base-background",
    },
    "svgDefs": {},
    "svgViewbox": {
      "height": 130,
      "width": 300,
      "x": 0,
      "x1": 0,
      "x2": 300,
      "y": 0,
      "y1": 0,
      "y2": 130,
    },
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "rect",
    "width": 300,
    "x": 684,
    "y": 540,
  },
  {
    ":frame-id": "1",
    ":id": "4",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#0000ff",
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 100,
    "id": "9bf6fbc5-040c-80f0-8004-f5d10c590e5f",
    "name": "svg-rect",
    "parentId": "9bf6fbc5-040c-80f0-8004-f5d10c5820ec",
    "points": [
      {
        "x": 694,
        "y": 550,
      },
      {
        "x": 894,
        "y": 550,
      },
      {
        "x": 894,
        "y": 650,
      },
      {
        "x": 694,
        "y": 650,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 20,
    "ry": 20,
    "selrect": {
      "height": 100,
      "width": 200,
      "x": 694,
      "x1": 694,
      "x2": 894,
      "y": 550,
      "y1": 550,
      "y2": 650,
    },
    "strokes": [],
    "svgAttrs": {},
    "svgDefs": {},
    "svgViewbox": {
      "height": 100,
      "width": 200,
      "x": 10,
      "x1": 10,
      "x2": 210,
      "y": 10,
      "y1": 10,
      "y2": 110,
    },
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "rect",
    "width": 200,
    "x": 694,
    "y": 550,
  },
  {
    ":frame-id": "1",
    ":id": "5",
    ":parent-id": "1",
    "content": "Sorry, your browser does not support inline SVG.",
    "fills": [],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 130,
    "id": "9bf6fbc5-040c-80f0-8004-f5d10c5942ab",
    "name": "svg-node",
    "parentId": "9bf6fbc5-040c-80f0-8004-f5d10c5820ec",
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 984,
        "y": 540,
      },
      {
        "x": 984,
        "y": 670,
      },
      {
        "x": 684,
        "y": 670,
      },
    ],
    "proportion": 2.3076923076923075,
    "proportionLock": true,
    "rotation": 0,
    "selrect": {
      "height": 130,
      "width": 300,
      "x": 684,
      "x1": 684,
      "x2": 984,
      "y": 540,
      "y1": 540,
      "y2": 670,
    },
    "strokes": [],
    "svgAttrs": {},
    "svgDefs": {},
    "svgViewbox": {
      "height": 130,
      "width": 300,
      "x": 0,
      "x1": 0,
      "x2": 300,
      "y": 0,
      "y1": 0,
      "y2": 130,
    },
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "svg-raw",
    "width": 300,
    "x": 684,
    "y": 540,
  },
]
`;

exports[`Plugins > plugin data 1`] = `
[
  {
    ":frame-id": "1",
    ":id": "1",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "Root Frame",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [
      "537105f7-8fcb-8055-8004-f5d11193332a",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
  {
    ":frame-id": "1",
    ":id": "2",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#B1B2B5",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 100,
    "id": "537105f7-8fcb-8055-8004-f5d11193332a",
    "name": "Rectangle",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "pluginData": {
      "TEST": {
        "testData": "test",
      },
    },
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 100,
        "y": 0,
      },
      {
        "x": 100,
        "y": 100,
      },
      {
        "x": 0,
        "y": 100,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 0,
    "ry": 0,
    "selrect": {
      "height": 100,
      "width": 100,
      "x": 0,
      "x1": 0,
      "x2": 100,
      "y": 0,
      "y1": 0,
      "y2": 100,
    },
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "rect",
    "width": 100,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Plugins > text and textrange 1`] = `
[
  {
    ":frame-id": "1",
    ":id": "1",
    ":parent-id": "1",
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "Root Frame",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [
      "59413672-fad9-806e-8004-f5d11c17da60",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
  {
    ":frame-id": "1",
    ":id": "2",
    ":parent-id": "1",
    "content": {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "fills": [
                    {
                      "fillColor": "#ff6fe0",
                      "fillOpacity": 1,
                    },
                  ],
                  "fontFamily": "Work Sans",
                  "fontId": "gfont-work-sans",
                  "fontSize": "40",
                  "fontStyle": "italic",
                  "fontVariantId": "500italic",
                  "fontWeight": "500",
                  "letterSpacing": "0",
                  "lineHeight": "1.2",
                  "text": "Hello",
                  "textAlign": "left",
                  "textDecoration": "underline",
                  "textTransform": "uppercase",
                  "typographyRefFile": null,
                  "typographyRefId": null,
                },
                {
                  "fills": [
                    {
                      "fillColor": "#000000",
                      "fillOpacity": 1,
                    },
                  ],
                  "fontFamily": "Work Sans",
                  "fontId": "gfont-work-sans",
                  "fontSize": "20",
                  "fontStyle": "italic",
                  "fontVariantId": "500italic",
                  "fontWeight": "500",
                  "letterSpacing": "0",
                  "lineHeight": "1.2",
                  "text": " World!",
                  "textAlign": "left",
                  "textDecoration": "underline",
                  "textTransform": "uppercase",
                  "typographyRefFile": null,
                  "typographyRefId": null,
                },
              ],
              "fills": [
                {
                  "fillColor": "#000000",
                  "fillOpacity": 1,
                },
              ],
              "fontFamily": "Work Sans",
              "fontId": "gfont-work-sans",
              "fontSize": "20",
              "fontStyle": "italic",
              "fontVariantId": "500italic",
              "fontWeight": "500",
              "letterSpacing": "0",
              "lineHeight": "1.2",
              "textAlign": "left",
              "textDecoration": "underline",
              "textTransform": "uppercase",
              "type": "paragraph",
              "typographyRefFile": null,
              "typographyRefId": null,
            },
          ],
          "type": "paragraph-set",
        },
      ],
      "type": "root",
    },
    "flipX": null,
    "flipY": null,
    "frameId": "00000000-0000-0000-0000-000000000000",
    "growType": "auto-width",
    "height": 48,
    "id": "59413672-fad9-806e-8004-f5d11c17da60",
    "name": "Text",
    "parentId": "00000000-0000-0000-0000-000000000000",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 214,
        "y": 0,
      },
      {
        "x": 214,
        "y": 48,
      },
      {
        "x": 0,
        "y": 48,
      },
    ],
    "positionData": [
      {
        "direction": "ltr",
        "fills": [
          {
            "fillColor": "#ff6fe0",
            "fillOpacity": 1,
          },
        ],
        "fontFamily": ""Work Sans"",
        "fontSize": "40px",
        "fontStyle": "italic",
        "fontWeight": "500",
        "height": 47,
        "letterSpacing": "normal",
        "text": "Hello",
        "textDecoration": "underline solid rgb(255, 111, 224)",
        "textTransform": "uppercase",
        "width": 129.03125,
        "x": 0,
        "x1": 0,
        "x2": 129.03125,
        "y": 47,
        "y1": 0,
        "y2": 47,
      },
      {
        "direction": "ltr",
        "fills": [
          {
            "fillColor": "#000000",
            "fillOpacity": 1,
          },
        ],
        "fontFamily": ""Work Sans"",
        "fontSize": "20px",
        "fontStyle": "italic",
        "fontWeight": "500",
        "height": 24,
        "letterSpacing": "normal",
        "text": " World!",
        "textDecoration": "underline solid rgb(0, 0, 0)",
        "textTransform": "uppercase",
        "width": 84.375,
        "x": 129.03125,
        "x1": 129.03125,
        "x2": 213.40625,
        "y": 42,
        "y1": 18,
        "y2": 42,
      },
    ],
    "rotation": 0,
    "selrect": {
      "height": 48,
      "width": 214,
      "x": 0,
      "x1": 0,
      "x2": 214,
      "y": 0,
      "y1": 0,
      "y2": 48,
    },
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "text",
    "width": 214,
    "x": 0,
    "y": 0,
  },
]
`;
